# python-flask-

./: .gitignore
app/: memo.txt
app/backend/: .gitignore  pyproject.toml
app/backend/app/: __init__.py  models.py  routes.py  run.py  schemas.py
app/frontend/src/app/: page.tsx
app/frontend/src/app/actions/: auth.ts
app/my_flask_project/: myapp.py
