[project]
name = "my-flask-project"
version = "0.1.0"
description = ""
authors = [
    {name = "ryusukeyasiro",email = "ryusukeyasiro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
